--- a/MyDemo.UI/Views/Home/Index.cshtml
+++ b/MyDemo.UI/Views/Home/Index.cshtml
@@ -41,16 +41,13 @@
 </div>
 
 <!-- Navbar End -->
-<div class="mt-lg-5">
-    <br />
-</div>
-<div class="mt-lg-2">
+<div class="mt-lg-5 py-5">
     <br />
 </div>
 
 @foreach ( var recipe in Model.Recipes)
 {
-    <div class="container-fluid py-5">
+    <div class="container-fluid">
         <div class="container py-5">
             <div class="row g-5 align-items-center">
                 <div class="col-12">
@@ -62,7 +59,10 @@
                             <div class="col-md-7">
                                 <div class="card-body">
                                     <h5 class="card-title"> @recipe.Title </h5>
-                                    <p class="card-text"> @recipe.Method</p>
+                                    @foreach (var method in recipe.Method)
+                                    {
+                                        <p class="card-text"> @method</p>
+                                    }
                                     <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
                                 </div>
                             </div>
