--- a/MyDemo.UI/Views/Login/Index.cshtml
+++ b/MyDemo.UI/Views/Login/Index.cshtml
@@ -2,6 +2,7 @@
     ViewData["Title"] = "Login Page";
 }
 
+<!-- Navbar start -->
 <div class="container-fluid fixed-top">
     <div class="container topbar bg-primary d-none d-lg-block">
         <div class="d-flex justify-content-between">
@@ -17,14 +18,14 @@
     </div>
     <div class="container px-0">
         <nav class="navbar navbar-light bg-white navbar-expand-xl">
-            <a class="navbar-brand" asp-action="Index" asp-controller="Home"><h5 class="text-primary display-6"> <i class="fa fa-chevron-circle-left"></i> Login</h5></a>
+            <a class="navbar-brand" asp-action="Index" asp-controller="Home"><h1 class="text-primary display-6"> <img src="img/img.png" class="card-img-top" alt="Card Image" style="width: 100px; height: 70px;"> RecipeWorld </h1></a>
             <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars text-primary"></span>
             </button>
             <div class="collapse navbar-collapse bg-white justify-content-end" id="navbarCollapse">
                 <div class="d-flex m-3 ms-auto">
                     <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
-                    <a class="position-relative me-4 my-auto" asp-action="Privacy" asp-controller="Home">
+                    <a class="position-relative me-4 my-auto" asp-action="Privacy" asp-asp-controller="Home">
                         <i class="fa fa-shopping-bag fa-2x"></i>
                         <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
                     </a>
@@ -36,7 +37,8 @@
         </nav>
     </div>
 </div>
-<!-- Login 2 - Bootstrap Brain Component -->
+<!-- Navbar End -->
+
 <div class="container-fluid py-5  mb-5 mt-5">
     <div class="container py-5">
         <div class="row justify-content-md-center">
@@ -44,6 +46,7 @@
                 <div class="bg-white p-4 p-md-5 rounded border border-primary mt-3">
                     <form action="#!">
                         <div class="row gy-3 gy-md-4 overflow-hidden">
+                            <h4 class="text-primary"> Login to your accout </h4>
                             <div class="col-12">
                                 <label for="email" class="form-label">Email <span class="text-danger">*</span></label>
                                 <input type="email" class="form-control" name="email" id="email" placeholder="name@example.com" required>
