--- a/MyDemo.UI/Views/Login/Index.cshtml
+++ b/MyDemo.UI/Views/Login/Index.cshtml
@@ -18,22 +18,10 @@
     </div>
     <div class="container px-0">
         <nav class="navbar navbar-light bg-white navbar-expand-xl">
-            <a class="navbar-brand" asp-action="Index" asp-controller="Home"><h1 class="text-primary display-6"> <img src="img/img.png" class="card-img-top" alt="Card Image" style="width: 100px; height: 70px;"> RecipeWorld </h1></a>
+            <a class="navbar-brand" asp-action="Index" asp-asp-controller="Home"><h1 class="text-primary display-6"> <img src="img/img.png" class="card-img-top" alt="Card Image" style="width: 100px; height: 70px;"> RecipeWorld </h1></a>
             <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars text-primary"></span>
-            </button>
-            <div class="collapse navbar-collapse bg-white justify-content-end" id="navbarCollapse">
-                <div class="d-flex m-3 ms-auto">
-                    <button class="btn-search btn border border-secondary btn-md-square rounded-circle bg-white me-4" data-bs-toggle="modal" data-bs-target="#searchModal"><i class="fas fa-search text-primary"></i></button>
-                    <a class="position-relative me-4 my-auto" asp-action="Privacy" asp-asp-controller="Home">
-                        <i class="fa fa-shopping-bag fa-2x"></i>
-                        <span class="position-absolute bg-secondary rounded-circle d-flex align-items-center justify-content-center text-dark px-1" style="top: -5px; left: 15px; height: 20px; min-width: 20px;">3</span>
-                    </a>
-                    <a class="my-auto" asp-action="Index" asp-controller="Login">
-                        <i class="fas fa-user fa-2x"></i>
-                    </a>
-                </div>
-            </div>
+            </button>            
         </nav>
     </div>
 </div>
