--- a/MyDemo.UI/Views/Login/Index.cshtml
+++ b/MyDemo.UI/Views/Login/Index.cshtml
@@ -18,7 +18,7 @@
     </div>
     <div class="container px-0">
         <nav class="navbar navbar-light bg-white navbar-expand-xl">
-            <a class="navbar-brand" asp-action="Index" asp-asp-controller="Home"><h1 class="text-primary display-6"> <img src="img/img.png" class="card-img-top" alt="Card Image" style="width: 100px; height: 70px;"> RecipeWorld </h1></a>
+            <a class="navbar-brand" asp-action="Index" asp-controller="Home"><h1 class="text-primary display-6"> <img src="img/img.png" class="card-img-top" alt="Card Image" style="width: 100px; height: 70px;"> RecipeWorld </h1></a>
             <button class="navbar-toggler py-2 px-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse">
                 <span class="fa fa-bars text-primary"></span>
             </button>            
