--- a/MyDemo.UI/Views/Home/Index.cshtml
+++ b/MyDemo.UI/Views/Home/Index.cshtml
@@ -4,6 +4,9 @@
     ViewData["Title"] = "Home Page";
 }
 
+@{
+    string searchTerm = ViewBag.SearchTerm ?? "";
+}
 <!-- Navbar start -->
 <div class="container-fluid fixed-top">
     <div class="container topbar bg-primary d-none d-lg-block">
@@ -28,12 +31,12 @@
                 <div class="d-flex m-3 ms-auto">
                     <form method="get" asp-action="Search" asp-controller="Home" class="me-4">
                         <div class="input-group me-4">
-                            <input type="text" name="searchTerm" class="form-control border-secondary" placeholder="Search..." aria-label="Search" aria-describedby="searchButton">
+                            <input type="text" name="searchTerm" value="@searchTerm" class="form-control border-secondary search-input" placeholder="Search..." aria-label="Search" aria-describedby="searchButton" id="searchInput">
                             <button type="submit" class="btn-search btn border border-secondary btn-md-square bg-white" id="searchButton" data-bs-toggle="modal" data-bs-target="#searchModal">
                                 <i class="fas fa-search text-primary"></i>
                             </button>
                         </div>
-                    </form>              
+                    </form>
                     <a class="my-auto" asp-action="Index" asp-controller="Login">
                         <i class="fas fa-user fa-2x"></i>
                     </a>
