--- a/MyDemo.UI/Views/Detail/Index.cshtml
+++ b/MyDemo.UI/Views/Detail/Index.cshtml
@@ -52,8 +52,8 @@
         <i class="fa fa-arrow-left fa-2x"> Back </i>
     </a>
 </div>
-<!-- Detail End -->
-<!-- Tastimonial Start -->
+
+<!--Detail Start-->
 <div class="container-fluid">
     <div class="container">
         <div class="row g-4 justify-content-center">
@@ -94,4 +94,4 @@
         </div>
     </div>
 </div>
-<!-- Tastimonial End -->
+<!--Detail End-->
